--- a/CoCo/front-end/manager/products/css/product-style.css
+++ b/CoCo/front-end/manager/products/css/product-style.css
@@ -6,6 +6,9 @@
     --price-color: #B01D1D;
     --line-color:#A19C9C;
 }
+.btn{
+    cursor:pointer;
+}
 /* Danh sách gói sản phẩm*/
 .content{
     padding:20px;
@@ -68,7 +71,7 @@ th{
     cursor: pointer;
 }
 .content{
-    height:1000px;
+    height:auto;
 }
 /*Danh sách sản phẩm*/
 .product-cardview{
@@ -147,4 +150,52 @@ th{
     margin-top: 50px;
     justify-content: center;
     gap:20px;
+}
+/* Chi tiết sản phẩm */
+#product-detail{
+    display:grid;
+    grid-template-columns: 1fr 2fr;
+    width:80%;
+    margin:auto;
+    padding:50px;
+}
+#product-detail-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:300px;
+    height: 400px;
+    background-color: var(--grey2);
+}
+#product-detail-info{
+    display: grid;
+    grid-template-rows: 3fr 3fr 1fr;
+}
+#product-detail-info p{
+    margin:5px;
+}
+.img-scale{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+/*add product*/
+.label-product{
+    font-size: 24sp;
+    font-weight: bold;
+}
+.input-product{
+    border: 1px solid var(--grey1);
+    border-radius: 5px;
+    background-color: var(--grey2);
+    padding: 5px;
+}
+.btn-primary{
+    display: inline-block;
+    min-width: 100px;
+    border-radius: 20px;
+    padding: 10px 20px;
+    text-decoration: none;
+    color:white;
+    margin:10px;
 }
