--- a/CoCo/front-end/related-people/css/related.css
+++ b/CoCo/front-end/related-people/css/related.css
@@ -1,57 +1,136 @@
-.content{
-    padding: 10px;
+.path a{
+    text-decoration: none;
+    color:#A19C9C;
+    font-size: 24sp;
 }
 
-.container{
+.info-container {
     display: grid;
     grid-template-columns: 2fr 7fr;
     gap: 5px;
 }
 
-.side-info{
-    display: grid;
-    grid-template-rows: 4fr 1fr 4fr 1fr;
-    gap: 10px;
-    border: 1px solid black;
-    height: 430px;
+.side-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 640px;
+    border: 3px solid #D8D2CB;
+    padding: 10px 20px;
+    background-color: #EEEEEE;
 }
 
-.main-info{
+#avatar {
+    height: 250px;
+    width: 250px;
+    overflow: hidden;
+    border-radius: 50%;
+    align-self: center;
+}
+
+
+#username {
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+}
+
+.btn-money{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    width: 90px;
+    height: 2rem;
+    background-color: #398AB9;
+}
+
+.main-info {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     gap: 10px;
 }
 
-.info-tag{
-    border: 1px solid black;
+.info-tag {
+    background-color: #D8D2CB;
+    box-shadow: 2px 2px 2px lightblue;
 }
 
-.detail-container{
+.detail-container {
     display: grid;
     grid-template-rows: 1fr 10fr;
-    height: 430px;
+    height: 640px;
 }
 
-.row-tabs{
+#row-tabs {
     display: grid;
     grid-template-columns: 5fr 5fr 5fr 5fr 3fr;
     gap: 10px;
 }
 
-.tab{
-    border: 1px solid black;
+.current-page a, #row-tabs a{
+    color: #000000;
+    text-decoration: none;
 }
 
-.detail{
+.tab {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 3px solid #D8D2CB;
+    border-bottom: none;
+    background-color: #D8D2CB;
+}
+
+#tab-detail{
+    background-color: #EEEEEE;
+}
+
+#detail {
     display: grid;
-    grid-template-rows: 3fr 4fr;
+    grid-template-rows: 1fr 1fr;
     gap: 10px;
+    background-color: #EEEEEE;
+    border: 3px solid #D8D2CB;
+    padding: 20px;
 }
 
-.basic-info{
+#basic-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     border: 1px solid black;
+    padding: 10px 30px;
 }
 
-.status{
+#status {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     border: 1px solid black;
+    padding: 10px 30px;
+}
+
+#name-gender-DOB {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#name,
+#gender,
+#DOB,
+#ID,
+#address,
+#current-status,
+#hospital,
+#note {
+    display: flex;
+    align-items: center;
+    height: 3rem;
+    background: #D8D2CB;
+}
+
+#note {
+    height: 6rem !important;
 }
