--- a/CoCo/front-end/css/style.css
+++ b/CoCo/front-end/css/style.css
@@ -92,5 +92,31 @@ li{
 }
 
 .welcome {
-    
+    color: var(--blue1);
+    font-weight: bold;
+    float: left;
+    width: 50%;
+}
+
+.login-form {
+    float: right;
+    background-color: #C4C4C4;
+    border-radius: 40px;
+    width: 40%;
+}
+
+.sign-in {
+    background-color: #398AB9;
+    color: var(--grey2);
+    font-weight: bold;
+    font-family: "Roboto", sans-serif;
+    font-size: 24px;
+    width: 100%;
+    height: 50px;
+    border: 0px;
+    border-radius: 15px;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
