--- a/CoCo/front-end/css/style.css
+++ b/CoCo/front-end/css/style.css
@@ -95,21 +95,20 @@ li{
     color: var(--blue1);
     font-weight: bold;
     float: left;
-    width: 50%;
+    width: calc(100% - 450px);
 }
 
 .login-form {
     float: right;
     background-color: #C4C4C4;
     border-radius: 40px;
-    width: 40%;
+    width: 400px;
 }
 
 .sign-in {
     background-color: #398AB9;
     color: var(--grey2);
     font-weight: bold;
-    font-family: "Roboto", sans-serif;
     font-size: 24px;
     width: 100%;
     height: 50px;
@@ -119,4 +118,11 @@ li{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.password-missing {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
 }
