bind data in product list

--- a/CoCo/front-end/manager/products/css/product-style.css
+++ b/CoCo/front-end/manager/products/css/product-style.css
@@ -82,6 +82,10 @@ th{
     border: 2px solid var(--grey1);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+.product-cardview:hover{
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
 .product-cardview img{
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
@@ -198,4 +202,7 @@ th{
     text-decoration: none;
     color:white;
     margin:10px;
+}
+.invisible{
+    display:none;
 }
