--- a/CoCo/front-end/css/template-style.css
+++ b/CoCo/front-end/css/template-style.css
@@ -39,8 +39,8 @@ body{
     justify-content: center;
 }
 .footer-box{
-    margin: 20px 7% 20px 7%;
-    width: 20%;
+    margin: 20px;
+    width: 250px;
     color:white;
    
 }
@@ -60,9 +60,14 @@ body{
     top:0;
     display:flex;
     justify-content:space-between;
+    align-items: center;
     border-bottom: 2px solid var(--blue1);
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), 0 0 20px 0 rgba(0, 0, 0, 0.19);
     z-index: 100;
+}
+.logo-img{
+    height:60px;
+    align-self:center;
 }
 .nav-list{
     list-style-type: none;
@@ -70,7 +75,7 @@ body{
 }
 li{
     display:inline-block;
-    margin:10px;
+    margin: 0 10px;
 }
 .nav-links{
     text-decoration: none;
@@ -79,7 +84,7 @@ li{
 }
 .nav-menu{
     align-self: center;
-    padding: 20px;
+    padding: 0 20px;
     color: var(--blue1);
 }
 
