--- a/CoCo/front-end/related-people/css/package-list.css
+++ b/CoCo/front-end/related-people/css/package-list.css
@@ -9,6 +9,8 @@
 
 
 #package-list{
+    display: flex;
+    justify-content: center;
 
 }
 
@@ -18,6 +20,40 @@
 }
 
 
-#pages{
+.card-view{
+    display: flex;
+    flex-direction: column;
+    border: solid 1px black;
+    border-radius: 10px;
+    overflow:hidden;
+    margin: 10px auto;
+}
 
+.image-details{
+    display: flex;  
+}
+
+.price-amount{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #EEEEEE;
+    padding: 5px 20px;
+}
+
+.image-details img{
+    width: 150px;
+    height: 150px;
+}
+
+
+.package-detail p{
+    font-size: smaller;
+}
+
+
+
+.add-to-cart img{
+    width: 30px;
+    height: 30px;
 }
