--- a/CoCo/front-end/admin/managers/css/manager-details-style.css
+++ b/CoCo/front-end/admin/managers/css/manager-details-style.css
@@ -58,9 +58,6 @@ th{
    color:#1C658C;
    width:20%;
 }
-.table-name{
-    text-align: left;
-}
 
 .side-info {
     display: flex;
@@ -80,7 +77,7 @@ th{
     align-self: center;
 }
 
-.name p{
+.full-name-manager{
     font-size: 20sp;
     font-weight: bold;
     text-align: center;
