--- a/CoCo/front-end/css/style.css
+++ b/CoCo/front-end/css/style.css
@@ -114,7 +114,7 @@ li{
     height: 50px;
     border: 0px;
     border-radius: 15px;
-    margin-top: 20px;
+    margin: 20px 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -124,5 +124,4 @@ li{
     display: flex;
     align-items: center;
     justify-content: center;
-    
 }
