fix - list-manager-history-page

--- a/CoCo/front-end/admin/managers/css/list-manager-history-style.css
+++ b/CoCo/front-end/admin/managers/css/list-manager-history-style.css
@@ -98,6 +98,15 @@ th{
     word-wrap: break-word;
 }
 
+.breadcrumb{
+    font-size: 10pt;
+}
+
+.breadcrumb-item a{
+    color: #a19c9c;
+    text-decoration: none;
+}
+
 /*footer*/
 .footer{
     background-color: var(--blue1);
