Update navbar + static links for related people pages

--- a/CoCo/front-end/related-people/css/related.css
+++ b/CoCo/front-end/related-people/css/related.css
@@ -20,10 +20,9 @@
     background-color: #EEEEEE;
 }
 
-#avatar {
+#avatar img{
     height: 250px;
     width: 250px;
-    overflow: hidden;
     border-radius: 50%;
     align-self: center;
 }
