--- a/CoCo/front-end/css/template-style.css
+++ b/CoCo/front-end/css/template-style.css
@@ -25,6 +25,7 @@ body{
 }
 
 /*footer*/
+/*
 .footer{
     position: relative;
     background-color: var(--blue1);
@@ -41,6 +42,35 @@ body{
 .footer-box{
     margin: 20px;
     width: 250px;
+    color:white;
+   
+}
+.footer-bottom{
+    color:white;
+}
+.footer-bottom-slogan{
+    height:40px;
+    margin: 1%;
+    margin-bottom:0px;
+}
+
+*/
+
+/*footer*/
+.footer{
+    background-color: var(--blue1);
+    width:100%;
+    margin-top:50px;
+}
+.footer-top{
+    position: relative;
+    width:100%;
+    display: flex;
+    justify-content: center;
+}
+.footer-box{
+    margin: 20px 7% 20px 7%;
+    width: 20%;
     color:white;
    
 }
