--- a/CoCo/front-end/admin/managers/css/list-manager-history-style.css
+++ b/CoCo/front-end/admin/managers/css/list-manager-history-style.css
@@ -84,6 +84,10 @@ table{
 th{
     text-align: center;
     background-color: var(--grey1);
+    padding: 3px;
+}
+td{
+    padding: 3px;
 }
 .table-stt{
     width:8%;
@@ -138,7 +142,7 @@ th{
     padding-top: 5px;
     margin: auto;
     width:80%;
-    height:500px;
+    height:690px;
     background-color: white;
     margin-top: 100px;
     z-index: 10;
@@ -150,17 +154,24 @@ th{
     margin-left: 10px;
 }
 
-.content{
+.filter{
     margin: auto;
-    width:80%;
-    height:400px;
+    width: 80%;
+    background-color: #D8D2CB;
+    margin-top: 20px;
+    padding: 20px;
+}
+
+#filter-heading{
+    text-align: left;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+#filters{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    border-radius: 15px;
-    border: 2px solid dark;
-    padding-top:50px;
+    justify-content: space-between;
+    margin: 10px;
 }
 
 .form-heading{
