--- a/CoCo/front-end/css/style.css
+++ b/CoCo/front-end/css/style.css
@@ -85,6 +85,14 @@ li{
     font-weight: bold !important;
 }
 
+.navbar-toggler {
+    border-color: var(--blue1) !important;
+    border-width: 2px;
+}
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(28,101,140, 1)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
+}
+
 .index .banner{
     width:100%;
 }
