--- a/CoCo/front-end/admin/css/style.css
+++ b/CoCo/front-end/admin/css/style.css
@@ -1,168 +1,96 @@
 :root {
-    --blue1: #1C658C;
-    --blue2: #398AB9;
-    --grey1: #D8D2CB;
-    --grey2: #EEEEEE;
+  --blue1: #1C658C;
+  --blue2: #398AB9;
+  --grey1: #D8D2CB;
+  --grey2: #EEEEEE;
 }
 body{
-    font-family: "Roboto", sans-serif;
-    margin:0px;
-    background-color: var(--grey2);
+  font-family: "Roboto", sans-serif;
+  margin:0px;
+  background-color: var(--grey2);
 } 
-.searchbar{
-    width: 40%;
-    border: 3px solid var(--blue1);
-    outline: none;
-    border-radius: 30px;
-    padding-left: 10px;
-    margin:auto;
+/*navbar*/
+.navbar{
+  background-color: var(--grey2) !important;
+  display:flex;
+  justify-content:space-between;
+  border-bottom: 2px solid var(--blue1);
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), 0 0 20px 0 rgba(0, 0, 0, 0.19);
+  z-index: 100;
 }
-.searchbar-input{
-    width: 90%;
-    border: none;
-    outline: none;
-    padding-left: 10px;
+.nav-list{
+  list-style-type: none;
+  display:inline-block;
+}
+li{
+  display:inline-block;
+  margin:10px;
+}
+.nav-links{
+  text-decoration: none;
+  color:var(--blue1);
+  font-weight: bold;
+}
+.nav-menu{
+  align-self: center;
+  padding: 20px;
+  color: var(--blue1);
+}
+
+#navbarSupportedContent li a {
+  font-family: "Roboto", sans-serif !important;
+  color: var(--blue1) !important;
+  font-weight: bold !important;
+}
+
+.banner{
+  width:100%;
+  position: absolute;
+  z-index: -1;
+}
+
+
+.breadcrumb{
+  font-size: 10pt;
+}
+
+.breadcrumb-item a{
+  color: #a19c9c;
+  text-decoration: none;
+}
+
+.nav-breadcrumb{
+  margin-left: 10px;
 }
 
 /*footer*/
 .footer{
-    background-color: var(--blue1);
-    width:100%;
-    margin-top:50px;
+  background-color: var(--blue1);
+  width:100%;
+  margin-top:50px;
 }
 .footer-top{
-    position: relative;
-    width:100%;
-    display: flex;
-    justify-content: center;
+  position: relative;
+  width:100%;
+  display: flex;
+  justify-content: center;
 }
 .footer-box{
-    margin: 20px 7% 20px 7%;
-    width: 20%;
-    color:white;
-   
+  margin: 20px 7% 20px 7%;
+  width: 20%;
+  color:white;
+ 
 }
 .footer-bottom{
-    color:white;
+  color:white;
 }
 .footer-bottom-slogan{
-    height:40px;
-    margin: 1%;
-    margin-bottom:0px;
+  height:40px;
+  margin: 1%;
+  margin-bottom:0px;
 }
-
-/*navbar*/
-.navbar{
-    background-color: var(--grey2);
-    position: sticky;
-    top:0;
-    display:flex;
-    justify-content:space-between;
-    border-bottom: 2px solid var(--blue1);
-    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), 0 0 20px 0 rgba(0, 0, 0, 0.19);
-    z-index: 100;
-}
-.nav-list{
-    list-style-type: none;
-    display:inline-block;
-}
-li{
-    display:inline-block;
-    margin:10px;
-}
-.nav-links{
-    text-decoration: none;
-    color:var(--blue1);
-    font-weight: bold;
-}
-.nav-menu{
-    align-self: center;
-    padding: 20px;
-    color: var(--blue1);
-}
-
-.banner{
-    width:100%;
-    position: absolute;
-    z-index: -1;
-}
-
-.content{
-    margin: auto;
-    width:80%;
-    height:500px;
-    background-color: white;
-    margin-top: 100px;
-    z-index: 10;
-    border-radius: 30px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    padding-top:50px;
-}
-
 
   
-  .page-container {
-    width: 60%;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    margin-top: 2rem;
-    border-radius: 5px;
-    padding: 10px 15px;
-  }
-  .page-container i {
-    padding: 6px 12px;
-    cursor: pointer;
-    font-size: 10pt;
-    color: var(--color-dark);
-    pointer-events: none;
-  }
-  .page-container button {
-    cursor: pointer;
-    background-color: transparent;
-    border: none;
-  }
-  .page-container button:disabled i {
-    color: #aaadc7;
-  }
-  
-  #pagination {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-  #pagination li {
-    list-style: none;
-    cursor: pointer;
-    border-radius: 5px;
-    overflow: hidden;
-    margin: 0 3px;
-  }
-  #pagination li.active {
-    background-color: dodgerblue;
-    color: white;
-    /*Circle Design with CSS*/
-    border-radius: 50%;
-  }
-  #pagination li.active a {
-    color: #fff;
-  }
-  #pagination li a {
-    text-decoration: none;
-    font-weight: 600;
-    padding: 8px 13px;
-    display: inline-block;
-    line-height: 1;
-    color: #a9a9a9;
-    font-size: 10pt;
-    pointer-events: none;
-  }
-  #pagination li:hover {
-    background-color: #ddd;
-    border-radius: 50%;
-  }
 
   
   
