--- a/CoCo/front-end/manager/products/css/add-product-page.css
+++ b/CoCo/front-end/manager/products/css/add-product-page.css
@@ -17,15 +17,14 @@
     color:white;
     margin:10px;
 }
-
 .product-price{
     display:inline-block; 
     width:47%;
+    margin-right: calc(6% - 5px);
 }
 .product-weight{
     display:inline-block; 
     width:47%;
-    margin-left:calc(6% - 10px);
 }
 .product-img{
     width:100px; 
