--- a/CoCo/front-end/admin/managers/css/manager-details-style.css
+++ b/CoCo/front-end/admin/managers/css/manager-details-style.css
@@ -1,3 +1,9 @@
+:root {
+    --blue1: #1C658C;
+    --blue2: #398AB9;
+    --grey1: #D8D2CB;
+    --grey2: #EEEEEE;
+  }
 .table-lock{
    text-align: center; 
    color:#1C658C;
@@ -8,7 +14,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 430px;
+    height: 480px;
     border: 3px solid #D8D2CB;
     padding: 10px 20px;
     background-color: #EEEEEE;
@@ -31,7 +37,7 @@
     padding-top: 5px;
     margin: auto;
     width:80%;
-    height: 500px;
+    height: 560px;
     background-color: white;
     margin-top: 100px;
     z-index: 10;
@@ -41,15 +47,8 @@
 
 .content{
     margin: auto;
-    width:80%;
-    height:400px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    border-radius: 15px;
-    border: 2px solid dark;
-    padding-top:50px;
+    width:86%;
+    height:500px;
 }
 
 .form-heading{
@@ -65,6 +64,32 @@
 table{
     width: 100%;
     margin-top: 0px;
+}
+
+thead, tbody { display: block; }
+thead:first-child{
+    width: 8%;
+}
+thead:last-child{
+    width: 20%;
+}
+tbody {   
+    height: 300px;
+    overflow-y: auto;    
+    overflow-x: hidden;  
+}
+
+#manager-history-table{
+    height: 500px;
+}
+
+.th-style{
+    text-align: center;
+    background-color: var(--grey1);
+    padding: 3px;
+    text-align: center;
+    border: 1px solid black;
+    border-collapse: collapse;
 }
 
 
