--- a/CoCo/front-end/related-people/css/package-list.css
+++ b/CoCo/front-end/related-people/css/package-list.css
@@ -16,6 +16,43 @@
     border-color: #398AB9;
 }
 
+#go-to-cart{
+    position: fixed;
+    bottom: 50px;
+    right: 2%;
+    border-radius: 50%;
+    width: 75px;
+    height: 75px;
+    z-index: 11;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    overflow: auto;
+    animation: shake 1s; 
+    animation-iteration-count: infinite; 
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
+
+#go-to-cart img{
+    width: 50px;
+    height: 50px;
+}
+
 
 .card-view{
     display: flex;
