--- a/CoCo/front-end/admin/managers/css/manager-details-style.css
+++ b/CoCo/front-end/admin/managers/css/manager-details-style.css
@@ -21,7 +21,7 @@
 }
 
 .avatar {
-    width:150%;
+    width:120%;
     height: auto;
     overflow: hidden;
     border-radius: 50%;
@@ -32,6 +32,14 @@
     font-size: 20sp;
     font-weight: bold;
     text-align: center;
+}
+
+.button{
+    text-align: center;
+}
+
+.custom-btn{
+    padding: 10px 20px;
 }
 .container{
     padding-top: 5px;
@@ -74,7 +82,7 @@ thead:last-child{
     width: 20%;
 }
 tbody {   
-    height: 300px;
+    height: 400px;
     overflow-y: auto;    
     overflow-x: hidden;  
 }
@@ -90,6 +98,26 @@ tbody {
     text-align: center;
     border: 1px solid black;
     border-collapse: collapse;
+}
+
+
+@media (max-width: 767px){
+    .container{
+        height: 700px;
+    }
+    .avatar{
+        display: none;
+    }
+    .side-info {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        height: 80px;
+        border: 3px solid #D8D2CB;
+        padding: 10px 20px;
+        background-color: #EEEEEE;
+    }
 }
 
 
