centerize add and edit product section

--- a/CoCo/front-end/css/style.css
+++ b/CoCo/front-end/css/style.css
@@ -97,6 +97,11 @@ li{
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(28,101,140, 1)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
 }
 
+.logo-img{
+    height:60px;
+    align-self:center;
+}
+
 .index .banner{
     width:100%;
 }
