Update all managers page

--- a/CoCo/front-end/admin/css/pagination.css
+++ b/CoCo/front-end/admin/css/pagination.css
@@ -4,7 +4,7 @@
     align-items: center;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 1rem;
+    margin-top:20px;
     border-radius: 5px;
     padding: 10px 15px;
   }
