--- a/CoCo/front-end/related-people/css/package-list.css
+++ b/CoCo/front-end/related-people/css/package-list.css
@@ -8,7 +8,6 @@
 #package-list{
     display: flex;
     justify-content: center;
-
 }
 
 .dropdown-toggle{
@@ -17,7 +16,7 @@
 }
 
 #go-to-cart{
-    position: fixed;
+    position: fixed;    
     bottom: 50px;
     right: 2%;
     border-radius: 50%;
@@ -51,6 +50,11 @@
 #go-to-cart img{
     width: 50px;
     height: 50px;
+}
+
+.abc :hover{
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
 
 
