Add waiting animation for personal page navigating

--- a/CoCo/front-end/related-people/css/buy-success.css
+++ b/CoCo/front-end/related-people/css/buy-success.css
@@ -14,4 +14,88 @@
 #success-text{
     font-weight: bold;
     color: green;
+    margin-bottom: 10px;
 }
+
+#return-home{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dot-pulse {
+    position: relative;
+    left: -9999px;
+    width: 10px;
+    height: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    background-color: #398AB9;
+    color: #398AB9;
+    box-shadow: 9999px 0 0 -5px #398AB9;
+    animation: dotPulse 1.5s infinite linear;
+    animation-delay: .25s;
+  }
+  
+  .dot-pulse::before, .dot-pulse::after {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    background-color: #398AB9;
+    color: #398AB9;
+  }
+  
+  .dot-pulse::before {
+    box-shadow: 9984px 0 0 -5px #398AB9;
+    animation: dotPulseBefore 1.5s infinite linear;
+    animation-delay: 0s;
+  }
+  
+  .dot-pulse::after {
+    box-shadow: 10014px 0 0 -5px #398AB9;
+    animation: dotPulseAfter 1.5s infinite linear;
+    animation-delay: .5s;
+  }
+  
+  @keyframes dotPulseBefore {
+    0% {
+      box-shadow: 9984px 0 0 -5px #398AB9;
+    }
+    30% {
+      box-shadow: 9984px 0 0 2px #398AB9;
+    }
+    60%,
+    100% {
+      box-shadow: 9984px 0 0 -5px #398AB9;
+    }
+  }
+  
+  @keyframes dotPulse {
+    0% {
+      box-shadow: 9999px 0 0 -5px #398AB9;
+    }
+    30% {
+      box-shadow: 9999px 0 0 2px #398AB9;
+    }
+    60%,
+    100% {
+      box-shadow: 9999px 0 0 -5px #398AB9;
+    }
+  }
+  
+  @keyframes dotPulseAfter {
+    0% {
+      box-shadow: 10014px 0 0 -5px #398AB9;
+    }
+    30% {
+      box-shadow: 10014px 0 0 2px #398AB9;
+    }
+    60%,
+    100% {
+      box-shadow: 10014px 0 0 -5px #398AB9;
+    }
+  }
