--- a/CoCo/front-end/css/style.css
+++ b/CoCo/front-end/css/style.css
@@ -9,6 +9,22 @@ body{
     margin:0px;
     background-color: var(--grey2);
 } 
+.banner{
+    width:100%;
+    position: absolute;
+    z-index: -1;
+}
+.content{
+    margin: auto;
+    width:80%;
+    height:auto;
+    background-color: white;
+    margin-top: 100px;
+    z-index: 10;
+    border-radius: 30px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding-top:50px;
+}
 .searchbar{
     width: 40%;
     border: 3px solid var(--blue1);
@@ -63,6 +79,10 @@ body{
     border-bottom: 2px solid var(--blue1);
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), 0 0 20px 0 rgba(0, 0, 0, 0.19);
     z-index: 100;
+    padding:0;
+}
+.navbar-brand{
+    padding:0;
 }
 .nav-list{
     list-style-type: none;
@@ -70,7 +90,7 @@ body{
 }
 li{
     display:inline-block;
-    margin:10px;
+    margin: 0 10px;
 }
 .nav-links{
     text-decoration: none;
@@ -79,7 +99,7 @@ li{
 }
 .nav-menu{
     align-self: center;
-    padding: 20px;
+    padding: 0 20px;
     color: var(--blue1);
 }
 
@@ -103,6 +123,7 @@ li{
 }
 
 .index .banner{
+    position: relative;
     width:100%;
 }
 
@@ -146,6 +167,7 @@ li{
     align-items: center;
     justify-content: center;
 }
+
 @media only screen and (max-width: 800px) {
     .searchbar{
         width:90%;
@@ -168,6 +190,6 @@ li{
         flex-direction: column;
     }
     .footer-box{
-        width: 100%;
+        width: 86%;
     }
 }
