--- a/CoCo/front-end/related-people/css/package-list.css
+++ b/CoCo/front-end/related-people/css/package-list.css
@@ -1,6 +1,9 @@
+.searchbar{
+    width: 30% !important;
+    min-width: 400px !important;
+}
+
 #package-filters{
-    display: flex;
-    justify-content: space-between;
     margin: 20px 100px;
 }
 
@@ -28,7 +31,6 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    overflow: auto;
     animation: shake 1s; 
     animation-iteration-count: infinite; 
 }
@@ -52,13 +54,9 @@
     height: 50px;
 }
 
-.abc :hover{
-    transform: scale(1.05);
-    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
-}
-
-
 .card-view{
+    min-width: 250px;
+    max-width: 340px;
     display: flex;
     flex-direction: column;
     border: solid 1px black;
@@ -82,6 +80,7 @@
 .image-details img{
     width: 150px;
     height: 150px;
+    align-self: center;
 }
 
 
