--- a/CoCo/front-end/related-people/css/package-list.css
+++ b/CoCo/front-end/related-people/css/package-list.css
@@ -107,6 +107,10 @@
     margin-right: 10px;
 }
 
+#decrease, #increase{
+    border-radius: 5px;
+}
+
 .add-to-cart img{
     width: 30px;
     height: 30px;
