--- a/CoCo/front-end/related-people/css/related.css
+++ b/CoCo/front-end/related-people/css/related.css
@@ -1,31 +1,31 @@
-body{
+body {
     font-family: "Roboto", sans-serif;
-    margin:0px;
+    margin: 0px;
     background-color: var(--grey2);
-} 
+}
 
-.nav-menu{
+.nav-menu {
     align-self: center;
     padding: 0 20px;
     color: var(--blue1);
 }
 
-.banner{
-    width:100%;
+.banner {
+    width: 100%;
     position: absolute;
     z-index: -1;
 }
 
-.content{
+.content {
     margin: auto;
-    width:80%;
-    height:auto;
+    width: 80%;
+    height: auto;
     background-color: white;
     margin-top: 100px;
     z-index: 10;
     border-radius: 30px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    padding-top:50px;
+    padding-top: 50px;
 }
 
 .path a {
@@ -50,11 +50,11 @@ body{
     background-color: #EEEEEE;
 }
 
-#avatar-username{
+#avatar-username {
     align-self: center;
 }
 
-#avatar{
+#avatar {
     align-self: center;
     padding-bottom: 5px;
 }
@@ -132,7 +132,7 @@ body{
     padding: 20px;
 }
 
-#detail-history {
+.detail-history {
     background-color: #EEEEEE;
     border: 3px solid #D8D2CB;
     padding: 30px 20px;
@@ -159,6 +159,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    background-color: #D8D2CB;
 }
 
 #name,
@@ -173,6 +174,7 @@ body{
     align-items: center;
     height: 3rem;
     background: #D8D2CB;
+    padding: 10px;
 }
 
 #note {
@@ -215,6 +217,7 @@ td {
     .main-info {
         display: flex;
         flex-direction: column;
+        border: none;
         padding-left: 10px;
     }
 
@@ -229,13 +232,13 @@ td {
         background-color: none;
     }
 
-    #avatar img{
+    #avatar img {
         width: 150px;
         height: 150px;
         align-self: center;
     }
 
-    #username{
+    #username {
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
@@ -261,7 +264,29 @@ td {
         height: auto;
     }
 
-    .content{
+    .content {
         overflow-x: auto;
+    }
+}
+
+@media (max-width: 768px) {
+
+    #name,
+    #gender,
+    #DOB,
+    #ID,
+    #address,
+    #current-status,
+    #hospital,
+    #note {
+        display: flex;
+        align-items: center;
+        height: auto;
+        background: #D8D2CB;
+        padding: 5px;
+    }
+
+    #detail, #basic-info, #status{
+        padding: 5px 5px;
     }
 }
